fix spacing issue

--- a/css/style-front-page.css
+++ b/css/style-front-page.css
@@ -64,7 +64,7 @@ body {
     position: fixed;
     top: 50%;
     left: 50%;
-    margin-top: -15px;
+    margin-top: 50px;
     margin-left: -80px;
     height: 30px;
     width: 160px;
